# cargo-about-features

./: Cargo.features  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  update_real_world.sh
examples/serde-reflection/: Cargo.features
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/snapshots/: feature_collision_handling.snap  simple_project_analysis.snap  workspace_project_analysis.snap
