[package]
name = "cargo-about-features"
version = "0.2.0"
edition = "2024"
description = "A Cargo subcommand to list enabled features for dependencies."
license = "MIT"
repository = "https://github.com/Binlogo/cargo-about-features"
keywords = ["cargo", "subcommand", "features", "dependencies", "lockfile"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
cargo_metadata = "0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
walkdir = "2"
regex = "1"

[dev-dependencies]
insta = { version = "1.44", features = ["json"] }
tempfile = "3.8"
